gitops/apps/admin-server/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-server
spec:
  tls:
  - hosts:
    - api-test.local
    secretName: admin-server-test-tls
  rules:
  - host: api-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-server
            port:
              number: 8080
